<resources>
    <string name="app_name">HuffmanApp</string>
    <string name="licz_huffmana">Licz Huffmana</string>
    <string name="tu_wprowad_tekst_do_przet_umaczenia">Tu wprowadź tekst do przetłumaczenia</string>
    <string name="entropia">Entropia: </string>
    <string name="translated_text">Przetłumaczony tekst</string>
    <string name="litera_znak">Litera/Znak</string>
    <string name="kod_asci">Kod ASCI</string>
    <string name="kod_huffmana">Kod Huffmana</string>
    <string name="wyst_pienia">Wystąpienia</string>
    <string name="meanKeyWordLength">Średnia długość słowa kluczowego: </string>
    <string name="drzewo">Drzewo:</string>
    <string name="she_sells">She sells...</string>
    <string name="autor_ukasz_przychodzie_imst_1_3_5">Autor: Łukasz Przychodzień IMST 1.3/5</string>
    <string name="geonek">Łukasz...</string>
</resources>