<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/container_shape"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geonek"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/white"
                android:paddingHorizontal="10dp"
                android:background="@drawable/button_style"
                android:onClick="whoAmIgenerateText"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/she_sells"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:paddingHorizontal="10dp"
                android:background="@drawable/button_style"
                android:onClick="sheSellsGenerateText"/>
        </LinearLayout>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputText"
        android:hint="@string/tu_wprowad_tekst_do_przet_umaczenia"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:shadowColor="@color/container"
        android:layout_marginHorizontal="5dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:background="@drawable/layout_shape"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:minHeight="100dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licz_huffmana"
            android:paddingHorizontal="10dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:layout_marginHorizontal="5dp"
            android:onClick="calculateHuffman"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:background="@drawable/container_shape"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/layout_shape"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kod_asci"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/litera_znak"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wyst_pienia"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kod_huffmana"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <ListView
            android:id="@+id/listView"
            android:background="@drawable/layout_shape"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="0dp"
            android:layout_height="200dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:background="@drawable/container_shape"
        android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/translatedText"
        android:layout_width="match_parent"
        android:paddingHorizontal="15dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_shape"
        android:textColor="@color/white"
        android:text="@string/translated_text"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entropyResult"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/layout_shape"
        android:textColor="@color/white"
        android:text="@string/entropia"
        android:layout_height="wrap_content" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/keyWOrdResult"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:background="@drawable/layout_shape"
        android:text="@string/meanKeyWordLength"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:orientation="vertical"
        android:background="@drawable/container_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/layout_shape"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/drzewo"/>
        <de.blox.treeview.TreeView
            android:id="@+id/tree"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:background="@drawable/container_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/layout_shape"
            android:text="@string/autor_ukasz_przychodzie_imst_1_3_5"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>